added german flag

--- a/html.html
+++ b/html.html
@@ -8,15 +8,31 @@
     height: 100%;
     margin: 0px;
     padding: 0px;}
-  div {
-    height: 200px;
-    width: 250px;
+  #top {
+    height: 100px;
+    width: 500px;
+    background-color: black;
+
+  }
+  #middle {
+    height: 100px;
+    width: 500px;
     background-color: #ff0000;
+
+  }
+  #bottom {
+    height: 100px;
+    width: 500px;
+    background-color: #ffd700 ;
 
   }
     </style>
   </head>
-  <div>
+  <div id= "top">
+  </div>
+  <div id= "middle">
+  </div>
+  <div id= "bottom">
   </div>
   <body>
   </body>
