added inline block

--- a/html.html
+++ b/html.html
@@ -4,36 +4,31 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-  html, body {
-    height: 100%;
-    margin: 0px;
-    padding: 0px;}
+
   #top {
+    margin-top: 50px;
+    margin-left:50px;
     height: 100px;
-    width: 500px;
+    width: 100px;
+    display: inline-block;
     background-color: black;
-
   }
-  #middle {
+  #side {
+    margin-top: 50px;
+    margin-left:50px;
+    display: inline-block;
     height: 100px;
-    width: 500px;
-    background-color: #ff0000;
-
-  }
-  #bottom {
-    height: 100px;
-    width: 500px;
-    background-color: #ffd700 ;
-
+    width: 100px;
+    background-color: black;
   }
     </style>
   </head>
-  <div id= "top">
-  </div>
-  <div id= "middle">
-  </div>
-  <div id= "bottom">
-  </div>
   <body>
+
+    <div id= "top">
+    </div>
+
+    <div id= "side">
+    </div>
   </body>
 </html>
